--- a/src/main/client/src/app/pages/timeline/timeline.component.html
+++ b/src/main/client/src/app/pages/timeline/timeline.component.html
@@ -1,74 +1,157 @@
 <div class="app-loading">@if(loading){<mat-progress-bar mode="indeterminate"></mat-progress-bar>}</div>
 <div class="app-fxLayout app-row app-fill" style="position: relative;">
   <div style="flex: 1 30%;" class="app-filters">
-
+    @if(hasFacets()) {
+    <div>
+      <mat-expansion-panel class="mat-mdc-elevation-specific mat-elevation-z0" [expanded]="true">
+        <mat-expansion-panel-header>
+          <mat-panel-title> {{ 'usedFilters' | translate}} </mat-panel-title>
+        </mat-expansion-panel-header>
+        <mat-list>
+          @for(k of selectedAuthors; track $index; let idx = $index){
+          <mat-list-item (click)="unfilter(authors, k)">
+            {{ 'field.author' | translate}}: {{ k }}
+          </mat-list-item>
+          }
+        </mat-list>
+      </mat-expansion-panel>
+    </div>
+    }
     @if (authors) {
-      <div>
-        <mat-expansion-panel class="mat-mdc-elevation-specific mat-elevation-z0" [expanded]="true">
-          <mat-expansion-panel-header>
-            <mat-panel-title> {{ 'field.authors' | translate}} </mat-panel-title>
-          </mat-expansion-panel-header>
-          <mat-list>
-            @for(k of authors; track $index; let idx = $index){
-              <mat-list-item>
-                {{ k.val}} ({{k.count}})
-              </mat-list-item>
-            }
-          </mat-list>
-        </mat-expansion-panel>
-      </div>
+    <div>
+      <mat-expansion-panel class="mat-mdc-elevation-specific mat-elevation-z0" [expanded]="true">
+        <mat-expansion-panel-header>
+          <mat-panel-title> {{ 'field.authors' | translate}} </mat-panel-title>
+        </mat-expansion-panel-header>
+        <mat-list>
+          @for(k of authors; track $index; let idx = $index){
+          <mat-list-item (click)="filter(k)">
+            <mat-checkbox [checked]="k.selected">{{ k.val}} ({{k.count}}) </mat-checkbox>
+          </mat-list-item>
+          }
+        </mat-list>
+      </mat-expansion-panel>
+    </div>
     }
     @if (recipients) {
-      <div>
-        <mat-expansion-panel class="mat-mdc-elevation-specific mat-elevation-z0" [expanded]="true">
-          <mat-expansion-panel-header>
-            <mat-panel-title> {{ 'field.recipients' | translate}} </mat-panel-title>
-          </mat-expansion-panel-header>
-          <mat-list>
-            @for(k of recipients; track $index; let idx = $index){
-              <mat-list-item>
-                {{ k.val}} ({{k.count}})
-              </mat-list-item>
-            }
-          </mat-list>
-        </mat-expansion-panel>
-      </div>
+    <div>
+      <mat-expansion-panel class="mat-mdc-elevation-specific mat-elevation-z0" [expanded]="true">
+        <mat-expansion-panel-header>
+          <mat-panel-title> {{ 'field.recipients' | translate}} </mat-panel-title>
+        </mat-expansion-panel-header>
+        <mat-list>
+          @for(k of recipients; track $index; let idx = $index){
+          <mat-list-item (click)="filter(k)">
+            <mat-checkbox [checked]="k.selected">{{ k.val}} ({{k.count}}) </mat-checkbox>
+          </mat-list-item>
+          }
+        </mat-list>
+      </mat-expansion-panel>
+    </div>
     }
     @if (mentioned) {
-      <div>
-        <mat-expansion-panel class="mat-mdc-elevation-specific mat-elevation-z0" [expanded]="true">
-          <mat-expansion-panel-header>
-            <mat-panel-title> {{ 'field.mentioned' | translate}} </mat-panel-title>
-          </mat-expansion-panel-header>
-          <mat-list>
-            @for(k of mentioned; track $index; let idx = $index){
-              <mat-list-item>
-                <span>{{ k.val}} ({{k.count}}) </span>
-              </mat-list-item>
-            }
-          </mat-list>
-        </mat-expansion-panel>
-      </div>
+    <div>
+      <mat-expansion-panel class="mat-mdc-elevation-specific mat-elevation-z0" [expanded]="true">
+        <mat-expansion-panel-header>
+          <mat-panel-title> {{ 'field.mentioned' | translate}} </mat-panel-title>
+        </mat-expansion-panel-header>
+        <mat-list>
+          @for(k of mentioned; track $index; let idx = $index){
+          <mat-list-item (click)="filter(k)">
+            <mat-checkbox [checked]="k.selected">{{ k.val}} ({{k.count}}) </mat-checkbox>
+          </mat-list-item>
+          }
+        </mat-list>
+      </mat-expansion-panel>
+    </div>
+    }
+    @if (keyword_categories) {
+    <div>
+      <mat-expansion-panel class="mat-mdc-elevation-specific mat-elevation-z0" [expanded]="true">
+        <mat-expansion-panel-header>
+          <mat-panel-title> {{ 'field.keywords' | translate}} </mat-panel-title>
+        </mat-expansion-panel-header>
+        <mat-list>
+          @for(k of keyword_categories; track $index; let idx = $index){
+          <mat-list-item (click)="filter(k)">
+            <mat-checkbox [checked]="k.selected">{{ k.val}} ({{k.count}}) </mat-checkbox>
+          </mat-list-item>
+          }
+        </mat-list>
+      </mat-expansion-panel>
+    </div>
     }
 
   </div>
   <div class="app-content app-fill-w app-fill-h">
     <div class="app-timeline">
-      <div echarts style="height: 100%; width: 100%;" [options]="chartOptions" (chartInit)="onChartInit($event)"
-        (chartBrushEnd)="onBrushChanged($event)" >
+      <div echarts style="height: 100%; width: 100%;" [initOpts]="{ locale: 'CZ' }" [options]="chartOptions" (chartInit)="onChartInit($event)"
+        (chartBrushEnd)="onBrushChanged($event)">
       </div>
-<div style="overflow: auto; height:100%; ">
-        
-            Počet dopisů : {{ letters().length }}
-              <div class="app-info-row">
-            @for(letter of letters(); track $index; let idx = $index){
-              <div>
-                <span>{{letter.identity_author}} -> {{letter.identity_recipient}} {{ letterPlaces(letter) }} {{ letter.date_computed | date : 'dd.MM.yyyy'}}</span>
-                <button class="app-hiko" mat-icon-button (click)="viewLetterInHIKO(letter.letter_id, letter.tenant)"
-              [matTooltip]="'action.view_in_hiko' | translate"><mat-icon>arrow_outward</mat-icon></button>     
-              </div>
-            } 
-              </div>
+      <div class="app-fxLayout app-row">
+        <div style="flex: 1 30%;">
+          <h3>Počet dopisů : {{ numFound }}</h3>
+        </div>
+
+        <mat-paginator #paginator class="demo-paginator" (page)="handlePageEvent($event)" [length]="numFound"
+          [pageSize]="rows" [showFirstLastButtons]="false" [pageSizeOptions]="pageSizeOptions" [pageIndex]="pageIndex"
+          aria-label="Select page">
+        </mat-paginator>
+
+
+      </div>
+      <div style="height: 400px; max-width: 100%;  overflow: auto;">
+        @if (showLetters()){
+        <table mat-table [dataSource]="letters()">
+          <!-- Name Column -->
+          <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef> Id </th>
+            <td mat-cell *matCellDef="let element"> {{element.letter_id}} </td>
+          </ng-container>
+
+          <!-- Position Column -->
+          <ng-container matColumnDef="author">
+            <th mat-header-cell *matHeaderCellDef> {{ 'field.author' | translate}} </th>
+            <td mat-cell *matCellDef="let element"> {{element.identity_author}} </td>
+          </ng-container>
+
+          <!-- Weight Column -->
+          <ng-container matColumnDef="recipient">
+            <th mat-header-cell *matHeaderCellDef> {{ 'field.recipient' | translate}} </th>
+            <td mat-cell *matCellDef="let element"> {{element.identity_recipient}} </td>
+          </ng-container>
+
+          <!-- Weight Column -->
+          <ng-container matColumnDef="origin">
+            <th mat-header-cell *matHeaderCellDef> {{ 'field.origin' | translate}} </th>
+            <td mat-cell *matCellDef="let element"> {{letterPlaces(element, 'origin')}} </td>
+          </ng-container>
+
+          <!-- Weight Column -->
+          <ng-container matColumnDef="destination">
+            <th mat-header-cell *matHeaderCellDef> {{ 'field.destination' | translate}} </th>
+            <td mat-cell *matCellDef="let element"> {{letterPlaces(element, 'destination')}} </td>
+          </ng-container>
+
+          <!-- Symbol Column -->
+          <ng-container matColumnDef="date">
+            <th mat-header-cell *matHeaderCellDef> {{ 'field.date' | translate}} </th>
+            <td mat-cell *matCellDef="let element"> {{ element.date_computed | date : 'dd.MM.yyyy'}} </td>
+          </ng-container>
+
+          <!-- Star Column -->
+          <ng-container matColumnDef="action" stickyEnd>
+            <th mat-header-cell *matHeaderCellDef aria-label="row actions">&nbsp;</th>
+            <td mat-cell *matCellDef="let element">
+              <button class="app-hiko" mat-icon-button (click)="viewLetterInHIKO(element.letter_id, element.tenant)"
+                [matTooltip]="'action.view_in_hiko' | translate"><mat-icon>arrow_outward</mat-icon></button>
+            </td>
+          </ng-container>
+
+          <tr mat-header-row *matHeaderRowDef="displayedColumns sticky: true"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+        }
       </div>
 
     </div>
