--- a/src/main/client/src/scss/_app-variables.scss
+++ b/src/main/client/src/scss/_app-variables.scss
@@ -63,6 +63,7 @@
 
   // layout
   --app-container: 1280px;
+  --app-hiko-color: rgb(109 40 217);
 
   // mat override
   --app-button-height: 32px;
