--- a/src/main/client/src/scss/_app-global.scss
+++ b/src/main/client/src/scss/_app-global.scss
@@ -293,8 +293,13 @@ fieldset {
 }
 
 .app-filters {
-  max-width: 300px;
+  width: 100%;
   padding: 2px;
+  overflow-y: auto;
+}
+
+.app-facet {
+  max-height: 220px;
   overflow-y: auto;
 }
 
@@ -330,4 +335,29 @@ fieldset {
 
 .app-hiko {
   color: var(--app-hiko-color) !important;
+}
+
+.app-small-icon-button {
+   width: 16px !important;
+   height: 16px !important;
+   padding: 0px !important;
+   display: inline-flex !important;
+   align-items: center;
+   justify-content: center;
+
+   & > *[role=img] {
+      width: 12px;
+      height: 12px;
+      font-size: 12px;
+
+      svg {
+         width: 12px;
+         height: 12px;
+      }
+   }
+
+   .mat-mdc-button-touch-target {
+      width: 16px !important;
+      height: 16px !important;
+   }
 }
