Timeline zoom on year

--- a/src/main/client/src/app/components/facets/facets.component.html
+++ b/src/main/client/src/app/components/facets/facets.component.html
@@ -1,1 +1,33 @@
-<p>facets works!</p>
+<!-- @if(hasFacets()) {
+    <div>
+      <mat-expansion-panel class="mat-mdc-elevation-specific mat-elevation-z0" [expanded]="true">
+        <mat-expansion-panel-header>
+          <mat-panel-title> {{ 'usedFilters' | translate}} </mat-panel-title>
+        </mat-expansion-panel-header>
+        <mat-list class="app-facet">
+          @for(k of selectedAuthors; track $index; let idx = $index){
+          <mat-list-item (click)="unfilter(authors, k)" >
+            {{ 'field.author' | translate}}: {{ k }}
+          </mat-list-item>
+          }
+        </mat-list>
+      </mat-expansion-panel>
+    </div>
+    }
+
+    @if (authors) {
+    <div>
+      <mat-expansion-panel class="mat-mdc-elevation-specific mat-elevation-z0" [expanded]="true">
+        <mat-expansion-panel-header>
+          <mat-panel-title> {{ 'field.authors' | translate}} </mat-panel-title>
+        </mat-expansion-panel-header>
+        <mat-list class="app-facet">
+          @for(k of authors; track $index; let idx = $index){
+          <mat-list-item (click)="filter(k)" matTooltip="{{ k.val}} ({{k.count}})">
+            <mat-checkbox [checked]="k.selected">{{ k.val}} ({{k.count}}) </mat-checkbox>
+          </mat-list-item>
+          }
+        </mat-list>
+      </mat-expansion-panel>
+    </div>
+    } -->
