--- a/src/main/client/src/app/pages/timeline/timeline.component.html
+++ b/src/main/client/src/app/pages/timeline/timeline.component.html
@@ -2,165 +2,9 @@
 <as-split direction="horizontal" [unit]="'pixel'">
     <as-split-area [size]="320" >
       <div style="flex: 1 30%;" class="app-filters">
-    @if(hasFacets()) {
-    <div>
-      <mat-expansion-panel class="mat-mdc-elevation-specific mat-elevation-z0" [expanded]="true">
-        <mat-expansion-panel-header>
-          <mat-panel-title> {{ 'usedFilters' | translate}} </mat-panel-title>
-        </mat-expansion-panel-header>
-        <mat-list class="app-facet">
-          @for(k of selectedAuthors; track $index; let idx = $index){
-          <mat-list-item (click)="unfilter(authors, k)" >
-            {{ 'field.author' | translate}}: {{ k }}
-          </mat-list-item>
-        }
-          @for(k of selectedRecipients; track $index; let idx = $index){
-          <mat-list-item (click)="unfilter(recipients, k)" >
-            {{ 'field.recipient' | translate}}: {{ k }}
-          </mat-list-item>
-          }
-          @for(k of selectedMentioned; track $index; let idx = $index){
-          <mat-list-item (click)="unfilter(mentioned, k)" >
-            {{ 'field.mentioned' | translate}}: {{ k }}
-          </mat-list-item>
-          }
-          @for(k of selectedKeywords; track $index; let idx = $index){
-          <mat-list-item (click)="unfilter(keyword_categories, k)" >
-            {{ 'field.keyword' | translate}}: {{ k }}
-          </mat-list-item>
-          }
-          @for(k of selectedProfessions; track $index; let idx = $index){
-          <mat-list-item (click)="unfilter(professions, k)" >
-            {{ 'field.profession' | translate}}: {{ k }}
-          </mat-list-item>
-          }
-          @for(k of selectedOrigins; track $index; let idx = $index){
-          <mat-list-item (click)="unfilter(origins, k)" >
-            {{ 'field.origin' | translate}}: {{ k }}
-          </mat-list-item>
-          }
-          @for(k of selectedDestinations; track $index; let idx = $index){
-          <mat-list-item (click)="unfilter(destinations, k)" >
-            {{ 'field.destination' | translate}}: {{ k }}
-          </mat-list-item>
-          }
-        </mat-list>
-      </mat-expansion-panel>
-    </div>
-    }
-    @if (authors) {
-    <div>
-      <mat-expansion-panel class="mat-mdc-elevation-specific mat-elevation-z0" [expanded]="true">
-        <mat-expansion-panel-header>
-          <mat-panel-title> {{ 'field.authors' | translate}} </mat-panel-title>
-        </mat-expansion-panel-header>
-        <mat-list class="app-facet">
-          @for(k of authors; track $index; let idx = $index){
-          <mat-list-item (click)="filter(k)" matTooltip="{{ k.val}} ({{k.count}})">
-            <mat-checkbox [checked]="k.selected">{{ k.val}} ({{k.count}}) </mat-checkbox>
-          </mat-list-item>
-          }
-        </mat-list>
-      </mat-expansion-panel>
-    </div>
-    }
-    @if (recipients) {
-    <div>
-      <mat-expansion-panel class="mat-mdc-elevation-specific mat-elevation-z0" [expanded]="true">
-        <mat-expansion-panel-header>
-          <mat-panel-title> {{ 'field.recipients' | translate}} </mat-panel-title>
-        </mat-expansion-panel-header>
-        <mat-list class="app-facet">
-          @for(k of recipients; track $index; let idx = $index){
-          <mat-list-item (click)="filter(k)" title="{{ k.val}} ({{k.count}})">
-            <mat-checkbox [checked]="k.selected">{{ k.val}} ({{k.count}}) </mat-checkbox>
-          </mat-list-item>
-          }
-        </mat-list>
-      </mat-expansion-panel>
-    </div>
-    }
-    @if (mentioned) {
-    <div>
-      <mat-expansion-panel class="mat-mdc-elevation-specific mat-elevation-z0" [expanded]="true">
-        <mat-expansion-panel-header>
-          <mat-panel-title> {{ 'field.mentioned' | translate}} </mat-panel-title>
-        </mat-expansion-panel-header>
-        <mat-list class="app-facet">
-          @for(k of mentioned; track $index; let idx = $index){
-          <mat-list-item (click)="filter(k)" title="{{ k.val}} ({{k.count}})">
-            <mat-checkbox [checked]="k.selected">{{ k.val}} ({{k.count}}) </mat-checkbox>
-          </mat-list-item>
-          }
-        </mat-list>
-      </mat-expansion-panel>
-    </div>
-    }
-    @if (keyword_categories?.length > 0) {
-    <div>
-      <mat-expansion-panel class="mat-mdc-elevation-specific mat-elevation-z0" [expanded]="true">
-        <mat-expansion-panel-header>
-          <mat-panel-title> {{ 'field.keywords' | translate}} </mat-panel-title>
-        </mat-expansion-panel-header>
-        <mat-list class="app-facet">
-          @for(k of keyword_categories; track $index; let idx = $index){
-          <mat-list-item (click)="filter(k)" title="{{ k.val}} ({{k.count}})">
-            <mat-checkbox [checked]="k.selected">{{ k.val}} ({{k.count}}) </mat-checkbox>
-          </mat-list-item>
-          }
-        </mat-list>
-      </mat-expansion-panel>
-    </div>
-    }
-    @if (professions?.length > 0) {
-    <div>
-      <mat-expansion-panel class="mat-mdc-elevation-specific mat-elevation-z0" [expanded]="true">
-        <mat-expansion-panel-header>
-          <mat-panel-title> {{ 'field.professions' | translate}} </mat-panel-title>
-        </mat-expansion-panel-header>
-        <mat-list class="app-facet">
-          @for(k of professions; track $index; let idx = $index){
-          <mat-list-item (click)="filter(k)" title="{{ k.val}} ({{k.count}})">
-            <mat-checkbox [checked]="k.selected">{{ k.val}} ({{k.count}}) </mat-checkbox>
-          </mat-list-item>
-          }
-        </mat-list>
-      </mat-expansion-panel>
-    </div>
-    }
-    @if (origins?.length > 0) {
-    <div>
-      <mat-expansion-panel class="mat-mdc-elevation-specific mat-elevation-z0" [expanded]="true">
-        <mat-expansion-panel-header>
-          <mat-panel-title> {{ 'field.origins' | translate}} </mat-panel-title>
-        </mat-expansion-panel-header>
-        <mat-list class="app-facet">
-          @for(k of origins; track $index; let idx = $index){
-          <mat-list-item (click)="filter(k)" title="{{ k.val}} ({{k.count}})">
-            <mat-checkbox [checked]="k.selected">{{ k.val}} ({{k.count}}) </mat-checkbox>
-          </mat-list-item>
-          }
-        </mat-list>
-      </mat-expansion-panel>
-    </div>
-    }
-    @if (destinations?.length > 0) {
-    <div>
-      <mat-expansion-panel class="mat-mdc-elevation-specific mat-elevation-z0" [expanded]="true">
-        <mat-expansion-panel-header>
-          <mat-panel-title> {{ 'field.destinations' | translate}} </mat-panel-title>
-        </mat-expansion-panel-header>
-        <mat-list class="app-facet">
-          @for(k of destinations; track $index; let idx = $index){
-          <mat-list-item (click)="filter(k)" title="{{ k.val}} ({{k.count}})">
-            <mat-checkbox [checked]="k.selected">{{ k.val}} ({{k.count}}) </mat-checkbox>
-          </mat-list-item>
-          }
-        </mat-list>
-      </mat-expansion-panel>
-    </div>
-    }
-
+        @if(solrResponse?.facets) { 
+          <app-facets [fields]="['authors', 'recipients', 'mentioned', 'keywords', 'prefessions', 'origins', 'destinations']" 
+          [facets]="solrResponse.facets" (onFiltersChanged)="onFiltersChanged($event)"></app-facets> }
   </div>
     </as-split-area>
     <as-split-area >
@@ -184,43 +28,37 @@
       <div style="height: 400px; max-width: 100%;  overflow: auto;">
         @if (showLetters()){
         <table mat-table [dataSource]="letters()">
-          <!-- Name Column -->
+          
           <ng-container matColumnDef="id">
             <th mat-header-cell *matHeaderCellDef> Id </th>
             <td mat-cell *matCellDef="let element"> {{element.letter_id}} </td>
           </ng-container>
 
-          <!-- Position Column -->
           <ng-container matColumnDef="author">
             <th mat-header-cell *matHeaderCellDef> {{ 'field.author' | translate}} </th>
             <td mat-cell *matCellDef="let element"> {{element.identity_author}} </td>
           </ng-container>
 
-          <!-- Weight Column -->
           <ng-container matColumnDef="recipient">
             <th mat-header-cell *matHeaderCellDef> {{ 'field.recipient' | translate}} </th>
             <td mat-cell *matCellDef="let element"> {{element.identity_recipient}} </td>
           </ng-container>
 
-          <!-- Weight Column -->
           <ng-container matColumnDef="origin">
             <th mat-header-cell *matHeaderCellDef> {{ 'field.origin' | translate}} </th>
             <td mat-cell *matCellDef="let element"> {{letterPlaces(element, 'origin')}} </td>
           </ng-container>
 
-          <!-- Weight Column -->
           <ng-container matColumnDef="destination">
             <th mat-header-cell *matHeaderCellDef> {{ 'field.destination' | translate}} </th>
             <td mat-cell *matCellDef="let element"> {{letterPlaces(element, 'destination')}} </td>
           </ng-container>
 
-          <!-- Symbol Column -->
           <ng-container matColumnDef="date">
             <th mat-header-cell *matHeaderCellDef> {{ 'field.date' | translate}} </th>
             <td mat-cell *matCellDef="let element"> {{ element.date_computed | date : 'dd.MM.yyyy'}} </td>
           </ng-container>
 
-          <!-- Star Column -->
           <ng-container matColumnDef="action" stickyEnd>
             <th mat-header-cell *matHeaderCellDef aria-label="row actions">&nbsp;</th>
             <td mat-cell *matCellDef="let element">
