--- a/src/main/client/src/app/components/facets/facets.component.html
+++ b/src/main/client/src/app/components/facets/facets.component.html
@@ -23,7 +23,7 @@
         </mat-expansion-panel-header>
         <mat-list class="app-facet">
           @for(k of facets()[f].buckets; track $index; let idx = $index){
-          <mat-list-item (click)="filter(f, k.val)" matTooltip="{{ k.val}} ({{k.count}})">
+          <mat-list-item (click)="filter(f, k.val)" title="{{ k.val}} ({{k.count}})" (mouseover)="fireMouserOver(f, k.val)" (mouseout)="fireMouseOut(f, k.val)">
             <mat-checkbox [checked]="isUsed(f, k.val)">{{ k.val}} ({{k.count}}) </mat-checkbox>
           </mat-list-item>
           }
