--- a/src/main/client/src/app/pages/centrality/centrality.component.html
+++ b/src/main/client/src/app/pages/centrality/centrality.component.html
@@ -18,70 +18,10 @@
         </mat-expansion-panel>
       </div>
     }
-    @if (authors) {
-      <div>
-        <mat-expansion-panel class="mat-mdc-elevation-specific mat-elevation-z0" [expanded]="true">
-          <mat-expansion-panel-header>
-            <mat-panel-title> {{ 'field.authors' | translate}} </mat-panel-title>
-          </mat-expansion-panel-header>
-          <mat-list>
-            @for(k of authors; track $index; let idx = $index){
-              <mat-list-item (mouseover)="showNode(k, 'author')" (mouseout)="hideNode()">
-                {{ k.val}} ({{k.count}})
-              </mat-list-item>
-            }
-          </mat-list>
-        </mat-expansion-panel>
-      </div>
-    }
-    @if (recipients) {
-      <div>
-        <mat-expansion-panel class="mat-mdc-elevation-specific mat-elevation-z0" [expanded]="true">
-          <mat-expansion-panel-header>
-            <mat-panel-title> {{ 'field.recipients' | translate}} </mat-panel-title>
-          </mat-expansion-panel-header>
-          <mat-list>
-            @for(k of recipients; track $index; let idx = $index){
-              <mat-list-item (mouseover)="showNode(k, 'recipient')" (mouseout)="hideNode()">
-                {{ k.val}} ({{k.count}})
-              </mat-list-item>
-            }
-          </mat-list>
-        </mat-expansion-panel>
-      </div>
-    }
-    @if (mentioned) {
-      <div>
-        <mat-expansion-panel class="mat-mdc-elevation-specific mat-elevation-z0" [expanded]="true">
-          <mat-expansion-panel-header>
-            <mat-panel-title> {{ 'field.mentioned' | translate}} </mat-panel-title>
-          </mat-expansion-panel-header>
-          <mat-list>
-            @for(k of mentioned; track $index; let idx = $index){
-              <mat-list-item (mouseover)="showNode(k, 'mentioned')" (mouseout)="hideNode()">
-                <span [style.color]="colors[idx % colors.length]">{{ k.val}} ({{k.count}}) </span>
-              </mat-list-item>
-            }
-          </mat-list>
-        </mat-expansion-panel>
-      </div>
-    }
-
-    @if (keywords) {
-
-      <mat-expansion-panel class="mat-mdc-elevation-specific mat-elevation-z0" [expanded]="true">
-        <mat-expansion-panel-header>
-          <mat-panel-title> {{ 'field.keywords' | translate}} </mat-panel-title>
-        </mat-expansion-panel-header>
-        <mat-list>
-          @for(k of keywords; track $index; let idx = $index){
-            <mat-list-item (click)="addFilter('keyword', k.val)">
-              <span [style.color]="colors[idx % colors.length]">{{ k.val}} ({{k.count}}) </span>
-            </mat-list-item>
-          }
-        </mat-list>
-      </mat-expansion-panel>
-    }
+     @if(solrResponse?.facets) {
+    <app-facets [fields]="['authors', 'recipients', 'mentioned', 'keywords', 'prefessions', 'origins', 'destinations']"
+      [facets]="solrResponse.facets" (onFiltersChanged)="onFiltersChanged($event)" (onMouserOver)="showNode($event)"
+      (onMouseOut)="hideNode()"></app-facets> }
 
   </div>
   <div class="app-content app-fill-w app-fill-h">
