--- a/src/main/client/src/app/pages/timeline/timeline.component.html
+++ b/src/main/client/src/app/pages/timeline/timeline.component.html
@@ -10,8 +10,7 @@
     <as-split-area >
       <div class="app-content app-fill-w app-fill-h">
     <div class="app-timeline">
-      <div echarts style="height: 100%; width: 100%;" [initOpts]="{ locale: 'CZ' }" [options]="chartOptions" (chartInit)="onChartInit($event)"
-        (chartBrushEnd)="onBrushChanged($event)">
+      <div echarts style="height: 100%; width: 100%;" [initOpts]="{ locale: 'CZ' }" [options]="chartOptions" (chartInit)="onChartInit($event)">
       </div>
       <div class="app-fxLayout app-row">
         <div style="flex: 1 30%;">
