--- a/src/main/client/src/app/pages/home/home.component.scss
+++ b/src/main/client/src/app/pages/home/home.component.scss
@@ -15,3 +15,10 @@
         width: 100%;
     }
 }
+
+.app-home-tenant {
+    display: flex;
+    justify-content: center;
+    padding: 20px 20px;
+    
+}
