--- a/src/main/client/src/app/pages/centrality/centrality.component.html
+++ b/src/main/client/src/app/pages/centrality/centrality.component.html
@@ -44,7 +44,7 @@
 
     @if (infoHeader) {
       <div class="app-letters-info">
-        <app-letters-info [header]="infoHeader" [content]="infoContent" (onClose)="closeInfo()"></app-letters-info>
+        <app-letters-info [header]="infoHeader" [content]="infoContent" [fields]="infoFields" [data]="infoData" (onClose)="closeInfo()"></app-letters-info>
       </div>
     }
 
