--- a/src/main/client/src/app/pages/map/map.component.html
+++ b/src/main/client/src/app/pages/map/map.component.html
@@ -96,7 +96,7 @@
 </div> -->
 @if (infoHeader) {
   <div class="app-letters-info">
-    <app-letters-info [header]="infoHeader" [content]="infoContent" (onClose)="closeInfo()"></app-letters-info>
+    <app-letters-info [header]="infoHeader" [fields]="infoFields" [data]="infoData" (onClose)="closeInfo()"></app-letters-info>
   </div>
 }
 </div>
